turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:8: error: RIGHT is already defined as value RIGHT
val RIGHT = 8
    ^Turmite:8: error: RIGHT  is already defined as value RIGHT
val RIGHT = 8
    ^